--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,8 +19,10 @@
     "pino-pretty": "^10.2.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "hono": "^3.7.5",
     "pino": "^8.15.6",
+    "prisma": "^5.4.1",
     "zod": "^3.22.4"
   }
 }
